# CPNR_OMEG_Collab

./: CMakeLists.txt  CPNR_OMEG_colab.cc  README.md  batch_vis.mac  init_vis.mac  init_vis_voxel.mac  run.mac  run_voxel.mac  source.mac  vis.mac
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  LSHit.hh  LSSD.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  LSHit.cc  LSSD.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
